--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 log = "0.4.22"
-salvo = { version = "0.74.2", features = ["serve-static"] }
+salvo = { version = "0.74.2", features = ["logging", "serve-static"] }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
 tracing-subscriber = "0.3.19"
 
